# mipt2025s-pichugin-a-d

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: detector_eval.yaml
src/barcode_refiner/: __init__.py  eval.py  geometry.py  logging_utils.py  refine.py  viz.py
src/barcode_refiner/detectors/: __init__.py  auto.py  barseg.py  heuristic.py  yolo.py
src/barcode_refiner/scripts/: decode_qr_demo.py  detector_eval.py  detector_eval_config.py  evaluate_on_markup.py  evaluate_on_markup_config.py  evaluate_refiners.py  normalize_patch.py  pipeline_demo.py  refine_image.py  report_topk.py  simulate_dataset.py
